# project01

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: appwright-test.yml
job_server/: agent_api.py  agent_worker.py  job_api.py  job_queue.py  main.py  models.py  scheduler.py  test.txt
qgjob/: cli.py  client.py
tests/: pass.spec.ts
