[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgjob"
version = "1.4.0"
description = "CLI for submitting and tracking AppWright test jobs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "typer[all]",
    "requests",
    "pydantic"
]

[project.scripts]
qgjob = "qgjob.cli:app"

[tool.setuptools.packages.find]
where = ["."]
